--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         cd ./python
         docker login --username=itelmen200 --password=${{ secrets.DOCKERPW }}
-        docker image build -t cloud_user/gitops:hellov1.0 .
-        docker push cloud_user/gitops:hellov1.0
+        docker image build -t itelmen200/gitops:hellov1.0 .
+        docker push itelmen200/gitops:hellov1.0
